Fix extra gaps between elements

--- a/src/assets/scss/components/_signInForm.scss
+++ b/src/assets/scss/components/_signInForm.scss
@@ -7,7 +7,7 @@ sign-in-form {
 
   hr {
     width: 65%;
-    margin: 12px auto;
+    margin-block: auto;
   }
 
   .no-account {
